--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>My Data Viz Portfolio</h1>
-    <p>Exploring data through visual storytelling</p>
+    <p>Exploring the building blocks of data visualization with Vega-Lite in Power BI</p>
   </header>
 
   <main id="blog-posts"></main>
