Website refactor and expansion

--- a/index.html
+++ b/index.html
@@ -8,12 +8,59 @@
 </head>
 <body>
   <header>
-    <h1>My Data Viz Portfolio</h1>
-    <p>Exploring the building blocks of data visualization with Vega-Lite in Power BI</p>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="how-i-work.html">How I Work</a> |
+      <a href="operating-manual.html">Operating Manual</a>
+    </nav>
+    <h1>Empathetic Data Viz Engineer</h1>
+    <p><i>"I'm a data painter. Just give me the easel and the paints and I will create the masterpiece."</i></p>
   </header>
 
-  <main id="blog-posts"></main>
+  <main>
+    <h2>Welcome</h2>
+    <p>This is where I write about data communication, semantic models, and empathetic engineering.</p>
+  <section>
+    <h2>Recent Posts</h2>
+    <ul>
+      <li><a href="blog/deneb-remake-series.html">Remaking charts using Vega-Lite in Deneb Custom Visual</a></li>
+      <p>A series of posts re-creating visuals using Vega-Lite inside a Deneb custom visual in Power BI.</p>
+      <!-- <li><a href="">Highlighting Outliers in a Weekly Mileage Chart</a></li>
+      <p>Weekly Mileage chart highlighting outliers.</p>
+      <li><a href="">Thoughtful PRs and Async Development in Power BI</a></li>
+      <p>A culture-setting practice. Clear bulletpoint notes for async dev and team clarity. Adopted by the team.</p>
+      <li><a href="">Solving from the micro up</a></li>
+      <p>Initially solving one case or one row in Power BI before generalisation to all cases. A contrast to over-architecting and the sunk cost fallacy.</p>
+       <li><a href="">Using the Power BI 'Description' Box and INFO DAX functions for lightweight documentation</a></li>
+       <p>A small case study in auditing and documentation Power BI objects.</p>
+       <li><a href="">The Shopping List App (Case Study)</a></li>
+       <p></p>
+       <li><a href="">The Taps Metaphor</a></li>
+       <p>UX matters especially when nobody else cares or notices. A reflection on quiet craftmanship.</p>
+       <li><a href="">How I Got Better at Power BI Without Going 'Full Data Engineer'</a></li>
+       <p>You don't need to master every part of the stack to be an effective Power BI developer.</p>
+       <li><a href="">DAX Doesn't Have to Be Scary</a></li>
+       <p>Your interface-first approach to DAX. Using SWITCH and IF as decision flow logic based on user interaction.</p>
+       <li><a href="">The PL-300 Certificate: Worth Mentioning?</a></li>
 
-  <script src="script.js"></script>
+       <li><a href="">Why I Fought For Chart Sorting</a></li>
+       <p>anonymised story about enhancing a chart and in so doing we lost the ability to sort the chart.</p>
+       <li><a href="">Beyond The Data Model: Why DAX Still Matters</a></li>
+       <p>A perfect data model is not the solution to all front end problems. </p>
+       <li><a href="">When Chart Titles Say Too Much</a></li>
+       <p>Commentary in chart titles only work when the data is static or there is no user interaction.</p>
+       <li><a href="">SQL or Semantic Layer</a></li>
+       <p>Complicated logic should go in the back end. Or should it? The tools are evolving should our thinking evolve too?</p>
+       <li><a href="">Remaking charts using D3.js</a></li>
+      <p>A series of posts remaking Vega Lite visuals using the D3.js language.</p> -->
+    </ul>
+
+  </section>
+  <hr class="section-divider">
+  </main>
 </body>
+ <footer>
+    <p>© Neil Hanes - Hand-coded, with love</p>
+  </footer>
 </html>
