Removing inline styling from page and adding to style.css

--- a/how-i-work.html
+++ b/how-i-work.html
@@ -6,7 +6,7 @@
   <title>My Data Viz Blog</title>
   <link rel="stylesheet" href="style.css" />
   <title>How I Work</title>
-  <style>
+  <!-- <style>
     body {
       font-family: sans-serif;
       line-height: 1.6;
@@ -45,7 +45,7 @@
     ul {
       line-height: 2;
     }
-  </style>
+  </style> -->
 </head>
 <body>
 
