--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
   <section>
     <h2>Recent Posts</h2>
     <ul>
-      <li><a href="blog/deneb-remake-series.html">Remaking charts using Vega-Lite in Deneb Custom Visual</a></li>
+      <li><a href="blog/deneb-remake-series.html">Remaking charts using Vega-Lite in Deneb Custom Visual</a>
+        <ul>
+          <li><a href="blog/deneb-remake-series.html#post1">1. US Domestic Gross Box Office</a></li>
+          <li><a href="blog/deneb-remake-series.html#post2">2. Game of Thrones Episode Ratings</a></li>
+          <li><a href="blog/deneb-remake-series.html#post3">3. Digital Nomads: Where Should You Go?</a></li>
+          <li><a href="blog/deneb-remake-series.html#post4">4. Men Speak Most in Best Picture Winning Films</a></li>
+          <li><a href="blog/deneb-remake-series.html#post5">5. World 4G Coverage</a></li>
+          <li><a href="blog/deneb-remake-series.html#post6">6. Ten Pin Bowling</a></li>
+        </ul>
+      </li>
+    
+    </ul>
       <p>A series of posts re-creating visuals using Vega-Lite inside a Deneb custom visual in Power BI.</p>
+
       <!-- <li><a href="">Highlighting Outliers in a Weekly Mileage Chart</a></li>
       <p>Weekly Mileage chart highlighting outliers.</p>
       <li><a href="">Thoughtful PRs and Async Development in Power BI</a></li>
