Additional Posts 2 & 3 added

--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
-      <a href="operating-manual.html">Operating Manual</a>
+      <a href="operating-manual.html">Operating Manual</a> |
+      <a href="fun.html">Just For Fun</a>
     </nav>
     <div style="position: relative; display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
       <h1>About Me</h1>
