--- a/how-i-work.html
+++ b/how-i-work.html
@@ -54,7 +54,8 @@
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
-      <a href="operating-manual.html">Operating Manual</a>
+      <a href="operating-manual.html">Operating Manual</a> |
+      <a href="fun.html">Just For Fun</a> 
     </nav>
     <h1>
       How I Work
