--- a/operating-manual.html
+++ b/operating-manual.html
@@ -12,7 +12,8 @@
       <a href="index.html">Home</a> |
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
-      <a href="operating-manual.html">Operating Manual</a>
+      <a href="operating-manual.html">Operating Manual</a> |
+      <a href="fun.html">Just For Fun</a>
     </nav>
     <h1>Operating Manual for the Empathetic Data Viz Engineer</h1>
     <p><i>A guide to thoughtful design, maintainable code, strong communication and data experiences that resonate</i></p>
