--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
     <hr class="section-divider">
     
     <h2>Let's Connect</h2>
-    <p>If any of this resonates with you or if you've got thoughts on scripting, UX, or data communication in general, I'd love to make a connection. Drop me a message via this site.</p>
+    <p>If any of this resonates with you or if you've got thoughts on scripting, UX, or data communication in general, I'd love to make a connection. Drop me a message via <a href="https://www.linkedin.com/in/neil-hanes-3b750b37a/">LinkedIn</a>.</p>
   
     <hr class="section-divider">
   </main>
