Changes to website navigation and styling

--- a/how-i-work.html
+++ b/how-i-work.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Data Viz Blog</title>
+  <title>My Plumbing Principles</title>
   <link rel="stylesheet" href="style.css" />
   <title>How I Work</title>
   <!-- <style>
@@ -52,6 +52,7 @@
   <header>
     <nav>
       <a href="index.html">Home</a> |
+      <a href="blog.html">Blog</a> |
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
       <a href="operating-manual.html">Operating Manual</a> |
