--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Data Viz Blog</title>
+  <title>About the Tap Whisperer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
       <a href="index.html">Home</a> |
+      <a href="blog.html">Blog</a> |     
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
       <a href="operating-manual.html">Operating Manual</a> |
