Additions to list of items in Just For Fun

--- a/fun.html
+++ b/fun.html
@@ -43,9 +43,11 @@
     <figure><img src='./images/ShoppingListExtract.png' alt='Extract of the finished Shopping List website' style='max-width:100%; height:auto;'><figcaption>An extract of the finished shopping list</figcaption></figure>
 
     <h2>2. Mileage Tracker</h2>
-    <p>This was borne out of my own curiosity and wanting to know how many miles I did per year.</p>
+    <!-- <p>This was borne out of my own curiosity and wanting to know how many miles I did per year.</p> -->
     <h2>3. Python scripts</h2>
     <h2>4. Personal website</h2>
+    <h2>5. D3.js Visual</h2>
+    <h2>6. My LinkedIn Cover Image</h2>
   </main>
     
 
