--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="operating-manual.html">Operating Manual</a> |
       <a href="fun.html">Just For Fun</a>
     </nav>
-    <h1>Empathetic Data Visualisation Engineer</h1>
-    <p><i>"I'm a data painter. Just give me the easel and the paints and I will create the masterpiece."</i></p>
+    <h1>Empathetic Data Systems Thinker</h1>
+    <p><i>"I don't just paint the masterpiece. I also design the gallery where it's displayed."</i></p>
   </header>
 
   <main>
