Small tweaks and improvements to wording and styling of About Me, How I Work and Operating Manual pages

--- a/about.html
+++ b/about.html
@@ -16,16 +16,16 @@
       <a href="operating-manual.html">Operating Manual</a> |
       <a href="fun.html">Just For Fun</a>
     </nav>
-    <div style="position: relative; display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
+    <div class="about-header">
       <h1>About Me</h1>
-      <img src="./images/IMG-20210426-WA0000.jpg" alt="Photo-of-me" style="position: absolute; right: 0; width:125px; border-radius: 50%; float: right; margin:2rem 0 1rem 0;">
+      <img src="./images/IMG-20210426-WA0000.jpg" alt="A professional photo of me" class="profile-photo">
     </div>
   </header>
   <main>
     <h2>Who Am I?</h2>
       <h3>Taps not Pipes</h3>
         <p>
-        If the process of obtaining insight from data was compared with plumbing, then I focus on the taps not the pipes.</p>
+        If delivering data insight was compared with plumbing, then I focus on the taps not the pipes.</p>
         <p>Not just <b><i>any</i></b> taps, but the kind that feel good to use: waterfall flow, smooth handles, well-placed and user-tested. Because the tap is where the user meets the system. You can build the most intricate plumbing behind the wall, but if the tap squeaks, leaks, is too hard to turn or confuses the user then the whole experience fails.</p>
 
         <p>
@@ -36,7 +36,7 @@
           I bring clarity to complexity and I let the work speak for itself.
         </blockquote> -->
       <h3>My Role</h3>
-        <p>I'm a Business Insights Developer using Power BI with a particular focus on user experience, visual clarity and DAX craftmanship. I enjoy building reports that are not only functional but thoughtful tools that the user actually enjoys interacting with.</p>
+        <p>I'm a Business Insights Developer specialising in Power BI, with a particular focus on user experience, visual clarity and DAX craftmanship. I enjoy building reports that are not only functional but thoughtful tools that the user actually enjoys interacting with.</p>
       <h3>Where</h3>
         <p>I work in a cross-functional product team often in a fast-moving environment. I bring structure and calm to the chaos, using data to bring clarity, not confusion.</p>
       <h3>What I care about</h3>
@@ -93,6 +93,8 @@
     <p>The more I write DAX, the more I realise it can be much more than just for calculating things. It can be a pseudo-scripting language used to express logic and solve complex puzzles. This section name is a nod to <code>CALCULATE</code> - an undoubtedly powerful function but also a reminder that DAX is not just CALCULATE. 
       
     <p>Whenever I see someone else tackle a DAX measure it's as if their thought process is: "It's DAX so it must be CALCULATE" without truly thinking through the problem and assessing if this is the correct approach.</p>
+
+    <p>This is a technical note for fellow developers but the take-away is universal: use the right tool for the job, not just the most powerful one.</p>
 
     <!-- <blockquote>
       Tools can shape ideas but it’s how we communicate them that drives impact.
