--- a/how-i-work.html
+++ b/how-i-work.html
@@ -113,7 +113,7 @@
 
     <h2>What I Avoid</h2>
     <ul>
-      <li><strong>Shiny slides, vague logic:</strong> I’d rather have a rough hand-sketched diagram that makes sense than a glossy deck that doesn't. Or a glossy deck that breaks if any requirements change (which they will).</li>
+      <li><strong>Style over substance</strong> Shiny slides, vague logic or a glossy deck that breaks the moment any requirements change (which they will).</li>
       <li><strong>Hierarchy-driven design:</strong> Good ideas should win, not job titles.</li>
       <li><strong>Fake agility:</strong> If we don’t size it, track it, or close the loop and therefore learn for next time, we’re not Agile.</li>
     </ul>
