--- a/operating-manual.html
+++ b/operating-manual.html
@@ -16,14 +16,14 @@
       <a href="operating-manual.html">Operating Manual</a> |
       <a href="fun.html">Just For Fun</a>
     </nav>
-    <h1>Operating Manual for the Empathetic Data Viz Engineer</h1>
+    <h1>Operating Manual for the Empathetic Craftsperson</h1>
     <p><i>A guide to thoughtful design, maintainable code, strong communication and data experiences that resonate</i></p>
   </header>
   <main>
     <h2>Engineer for Empathy</h2>
     <ol>
       <li>Treat every visual and every DAX expression as a conversation with a human.
-        <p>The context might be understood now but will you or a colleague still understand it in six months time? Clarity now prevents confusion (and therefore time) in the future. Every measure, label and visual should anticipate questions a user will ask. Assume they're smart, not psychic.</p>
+        <p>The context might be understood now but will you or a colleague still understand it in six months time? Clarity now prevents costly confusion later. Every measure, label and visual should anticipate questions a user will ask. Assume they're smart, not psychic.</p>
       </li>
       <li>Build for trust, clarity and continuity.
         <p>Perfect numbers don't matter if nobody trusts them. A fast report is useless if it breaks when the user changes something or when you're on leave. In my experience robustness trumps accuracy and if the report breaks more often than not, you lose user engagement. </p>
@@ -57,7 +57,7 @@
       <li>Structure measures into folders and subfolders to prevent overwhelm and help navigation
         <p>The number of measures in a semantic model can grow extremely quickly and two measures may look similar but differ very slightly. For these reasons, it is best to organise similar measures into folders and subfolders to help future developers find the measure they need.</p>
       </li>
-      <li>Avoid cleverness for its own sake - keep it simple stupid!
+      <li>Avoid cleverness for its own sake - favour simple, robust solutions over clever, brittle ones.
         <p>Often the best solutions are the simplest solution. When writing a measure to return a certain metric, my approach is to get it to work for one case. Then expand it to work for all cases and for all user interactions. Then I look at it and wonder if I can simplify the DAX somehow. Sometimes I can't and that's fine. But often I can and my future self is always grateful when re-reading a measure further down the line.</p>
       </li>
     </ol>
@@ -92,7 +92,7 @@
         <p>Use font size to draw the user's attention. Titles should be big and noticeable. They should be bigger than subtitles which themselves should be bigger than normal text. Use consistent font to create a consistent report. Inconsistent font is jarring and is noticed surprising quickly by the eye.</p>
       </li>
       <li>UX instruments, not cosmetics
-        <p>Design isn't about making things pretty, it's about making them useful. Where possible, every element on the page should serve a purpose, to guide, inform or clarify. Often we're handcuffed by stakeholders' requirements but we should be asking ourselves questions like: Does this visual add value? Does the layout have a natural flow? Could a user pick up this report without needing a guided walkthrough?</p>
+        <p>Design isn't about cosmetics, it's about making them functional. Every element should guide, inform or clarify. Often we're handcuffed by stakeholders' requirements but we should be asking ourselves questions like: Does this visual add value? Does the layout have a natural flow? Could a user pick up this report without needing a guided walkthrough?</p>
         <p>Don't over-design but do design intentionally and with purpose.</p>
         <p>Simpler is often better.</p>
       </li>
