Typos in About page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
           I bring clarity to complexity and I let the work speak for itself.
         </blockquote> -->
       <h3>My Role</h3>
-        <p>I'm a Business Insights Developer specialising in Power BI, with a particular focus on user experience, visual clarity and DAX craftmanship. I enjoy building reports that are not only functional but thoughtful tools that the user actually enjoys interacting with.</p>
+        <p>I'm a Business Insights Developer specialising in Power BI, with a particular focus on user experience, visual clarity and DAX craftsmanship. I enjoy building reports that are not only functional but thoughtful tools that the user actually enjoys interacting with.</p>
       <h3>Where</h3>
         <p>I work in a cross-functional product team often in a fast-moving environment. I bring structure and calm to the chaos, using data to bring clarity, not confusion.</p>
       <h3>What I care about</h3>
@@ -52,7 +52,7 @@
     <h3>Maintainability</h3>
     <p>Anyone can ship something that works for today and for today's scenario. It's harder (but totally worth it) to build something that makes sense months or even years later. I aim for clean DAX code, well-named measures, logical models and good documentation. You can never have too many comments or too much documentation.</p>
     
-    <h3>Craftmanship</h3>
+    <h3>Craftsmanship</h3>
     <p>I take pride in how things are done. From small touches like tooltips to larger patterns like dynamic titles or reusable components. I treat report-building as a craft, not a conveyor belt.</p>
     
     <h3>Agility & Pragmatism</h3>
