Blueprint #1 Star Schema Proposal

--- a/operating-manual.html
+++ b/operating-manual.html
@@ -14,6 +14,7 @@
       <a href="about.html">About</a> |
       <a href="how-i-work.html">How I Work</a> |
       <a href="operating-manual.html">Operating Manual</a> |
+      <a href="blueprints.html">Blueprints</a> |
       <a href="fun.html">Just For Fun</a>
     </nav>
     <h1>Operating Manual for the Empathetic Craftsperson</h1>
