Blueprint #2 Approach to Switching Fee Model

--- a/blueprints/1-star-schema-proposal.html
+++ b/blueprints/1-star-schema-proposal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beyond The Sink</title>
+  <title>Star Schema Proposal</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
@@ -153,7 +153,7 @@
 
       <div class="nav-next">
         <!-- <a href="#top">Back to top of page</a> -->
-        <!-- <a href="the-importance-of-dev-testing.html">Next: The Importance Of Dev Testing →</a> -->
+        <a href="2-approach-to-switching-fee-model.html">Next: An Approach To Switching Fee Model →</a>
       </div>
       
     </div>
